# fastApi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sql_notes.txt
.github/workflows/: main.yml
app/: main.py
app/api/v1/routes/: auth.py  orders.py  products.py  users.py
app/auth/: jwt_handler.py
app/core/: config.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: orders.py  product.py  user.py
app/schemas/: orders.py  product.py  user.py
app/services/: auth_service.py  order_service.py  product_service.py  token_blacklist_service.py
app/utils/: pagination.py
tests/: test_auth.py  test_products.py  test_users.py
