[tool.poetry]
name = "fastapi-auth-products"
version = "0.1.0"
description = "A FastAPI application for user authentication and product management."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
asyncpg = "^0.24.0"
pydantic = "^1.8.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.7.5"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"